# slipstream

./: .gitignore  README.md  meson.build  meson.options
.github/workflows/: build.yml
include/: pthread.h  unistd.h  wincompat.h
include/arpa/: inet.h
include/sys/: time.h
slipstream-binaries/: slipstream-client  slipstream-server
src/: slipstream_client.c
windows-build-logs-1/meson-logs/: meson-log.txt
windows-build-logs/meson-logs/: meson-log.txt
